# WeeChess

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE.txt  README.MD  Readme.md  gmon.out  log.txt
include/: board.hpp  boardStaticData.hpp  eval.hpp  log.hpp  move.hpp  ocl.hpp  perft.hpp  protocols.hpp  pvtable.hpp  search.hpp  types.hpp  uci.hpp
source/: CMakeLists.txt  EvalKernel.cl  board.cpp  eval.cpp  kernels.cl  log.cpp  main.cpp  move.cpp  moveKernel.cl  ocl.cpp  perft.cpp  protocols.cpp  pvtable.cpp  search.cpp  uci.cpp
